--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,1 +1,6 @@
-<p> <%= @answer %> </p>
+<h1>Stupid coaching</h1>
+
+<p><%=@question%></p>
+<p><%=@answer%></p>
+
+<%= link_to "go back", ask_path %>
