--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -3,4 +3,7 @@
 <p><%=@question%></p>
 <p><%=@answer%></p>
 
-<%= link_to "go back", ask_path %>
+<button type="button" class="btn btn-success">
+  <%= link_to "go back", ask_path %>
+</button>
+
